@@ -98,6 +98,8 @@ http://sourceforge.net/tracker/index.php?func=detail&aid=<id>&group_id=5470&atid
 
 - curses.ascii - space (ASCII 32) is now considered whitespace
 
+- #125375 - parsermodule.c - fix parser.tuple2ast() failure on valid parse tree
+
 What's New in Python 2.0?
 =========================
 
